--- a/templates/anchor_system_real.html
+++ b/templates/anchor_system_real.html
@@ -731,24 +731,24 @@
                     </div>
                 </div>
             </div>
-            <div class="table-container">
-                <table id="subAccountPositionTable">
+            <div class="table-container" style="overflow-x: auto;">
+                <table id="subAccountPositionTable" style="min-width: 1600px;">
                     <thead>
                         <tr style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white;">
-                            <th style="color: white;">账户名</th>
-                            <th style="color: white;">编号</th>
-                            <th style="color: white;">币种</th>
-                            <th style="color: white;">方向</th>
-                            <th style="color: white;">持仓量</th>
-                            <th style="color: white;">开仓均价</th>
-                            <th style="color: white;">标记价格</th>
-                            <th style="color: white;">杠杆</th>
-                            <th style="color: white;">未实现盈亏</th>
-                            <th style="color: white;">保证金</th>
-                            <th style="color: white;">收益率</th>
-                            <th style="color: white;">今日维护</th>
-                            <th style="color: white;">状态</th>
-                            <th style="color: white;">操作</th>
+                            <th style="color: white; min-width: 100px;">账户名</th>
+                            <th style="color: white; min-width: 60px;">编号</th>
+                            <th style="color: white; min-width: 140px;">币种</th>
+                            <th style="color: white; min-width: 80px;">方向</th>
+                            <th style="color: white; min-width: 100px;">持仓量</th>
+                            <th style="color: white; min-width: 100px;">开仓均价</th>
+                            <th style="color: white; min-width: 100px;">标记价格</th>
+                            <th style="color: white; min-width: 60px;">杠杆</th>
+                            <th style="color: white; min-width: 120px;">未实现盈亏</th>
+                            <th style="color: white; min-width: 120px;">保证金</th>
+                            <th style="color: white; min-width: 100px;">收益率</th>
+                            <th style="color: white; min-width: 100px;">今日维护</th>
+                            <th style="color: white; min-width: 80px;">状态</th>
+                            <th style="color: white; min-width: 100px;">操作</th>
                         </tr>
                     </thead>
                     <tbody id="subAccountPositionBody">
