--- a/templates/anchor_system_real.html
+++ b/templates/anchor_system_real.html
@@ -731,24 +731,24 @@
                     </div>
                 </div>
             </div>
-            <div class="table-container" style="overflow-x: auto;">
-                <table id="subAccountPositionTable" style="min-width: 1600px;">
+            <div class="table-container">
+                <table id="subAccountPositionTable" style="width: 100%; table-layout: fixed;">
                     <thead>
                         <tr style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white;">
-                            <th style="color: white; min-width: 100px;">账户名</th>
-                            <th style="color: white; min-width: 60px;">编号</th>
-                            <th style="color: white; min-width: 140px;">币种</th>
-                            <th style="color: white; min-width: 80px;">方向</th>
-                            <th style="color: white; min-width: 100px;">持仓量</th>
-                            <th style="color: white; min-width: 100px;">开仓均价</th>
-                            <th style="color: white; min-width: 100px;">标记价格</th>
-                            <th style="color: white; min-width: 60px;">杠杆</th>
-                            <th style="color: white; min-width: 120px;">未实现盈亏</th>
-                            <th style="color: white; min-width: 120px;">保证金</th>
-                            <th style="color: white; min-width: 100px;">收益率</th>
-                            <th style="color: white; min-width: 100px;">今日维护</th>
-                            <th style="color: white; min-width: 80px;">状态</th>
-                            <th style="color: white; min-width: 100px;">操作</th>
+                            <th style="color: white; width: 7%;">账户名</th>
+                            <th style="color: white; width: 4%;">编号</th>
+                            <th style="color: white; width: 10%;">币种</th>
+                            <th style="color: white; width: 5%;">方向</th>
+                            <th style="color: white; width: 7%;">持仓量</th>
+                            <th style="color: white; width: 8%;">开仓均价</th>
+                            <th style="color: white; width: 8%;">标记价格</th>
+                            <th style="color: white; width: 4%;">杠杆</th>
+                            <th style="color: white; width: 10%;">未实现盈亏</th>
+                            <th style="color: white; width: 9%;">保证金</th>
+                            <th style="color: white; width: 7%;">收益率</th>
+                            <th style="color: white; width: 7%;">今日维护</th>
+                            <th style="color: white; width: 6%;">状态</th>
+                            <th style="color: white; width: 8%;">操作</th>
                         </tr>
                     </thead>
                     <tbody id="subAccountPositionBody">
